# nope-rs

./: Cargo.toml  Dockerfile  README.md  nopes.json
entity/: Cargo.toml
entity/src/: lib.rs  nopes.rs
migration/src/: lib.rs  m20250715_031636_init.rs
nope-cli/: Cargo.toml
nope-cli/src/: main.rs
src/: config.rs  main.rs  nope_service.rs
src/db/: mod.rs  nopes.rs  postgres_service.rs
src/routes/: admin.rs  mod.rs  nope.rs
src/types/: mod.rs  nope.rs
src/utils/: id.rs  mod.rs  webutils.rs
