[workspace]
members = [
    ".",
    "nope-cli",
]

[package]
name = "nope-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
env_logger = "0.9"
tokio = "1.45.0"
uuid = { version = "1.16.0", features = ["v4"]}
urlencoding = "2"
tracing = "0.1.41"
chrono = "0.4.41"
actix-governor = "0.8.0"
rand = "0.8.5"
